# clog-rs

./: .env.example  .gitignore  Cargo.toml  README.md
migration/src/: m20220101_000001_create_table.rs
src/: context.rs  db.rs  main.rs
src/commands/: command_executor.rs  command_output.rs  completion.rs  mod.rs  project.rs  report.rs  sync.rs  task.rs
src/entity/: mod.rs  prelude.rs  projects.rs  tasks.rs  time_entries.rs
tests/: project_create_snapshot_test.rs  project_create_test.rs  project_list_snapshot_test.rs  project_list_test.rs  report_snapshot_test.rs  task_list_snapshot_test.rs  task_list_test.rs  utils.rs
tests/common/: mod.rs
tests/snapshots/: create_project_human_snapshot.txt  create_project_json_snapshot.txt  create_project_toml_snapshot.txt  create_project_yaml_snapshot.txt  list_projects_human_snapshot.txt  list_projects_json_snapshot.txt  list_projects_toml_snapshot.txt  list_projects_yaml_snapshot.txt  list_tasks_human_snapshot.txt  list_tasks_json_snapshot.txt  list_tasks_toml_snapshot.txt  list_tasks_yaml_snapshot.txt  report_projects_human_snapshot.txt  report_projects_json_snapshot.txt  report_projects_yaml_snapshot.txt
