[workspace]
members = ["migration"]


[package]
name = "log"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
sea-orm = { version = "1.1.12", features = [
    "sqlx-sqlite",
    "runtime-tokio-rustls",
] }
tokio = { version = "1.45.1", features = ["full"] }
migration = { path = "./migration" }
