[workspace]
members = ["migration"]

[package]
name = "clog"
version = "0.1.0"
edition = "2024"

[dependencies]
migration = { path = "./migration" }
clap = { version = "4.5.40", features = ["derive"] }
sea-orm = { version = "1.1.12", features = [
    "sqlx-sqlite",
    "runtime-tokio-rustls",
] }
tokio = { version = "1.45.1", features = ["full"] }
miette = { version = "7.6.0", features = ["fancy"] }
chrono = "0.4.41"
tabled = "0.20.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_yaml = "0.9.34"
toml = "0.8.23"
dirs = "6.0.0"
object_store = { version = "0.12.2", features = ["azure"] }
bytes = "1.10.1"
